# auth-rs

./: Cargo.toml
examples/axum/: .gitignore  Cargo.toml  flake.nix
examples/axum/src/: main.rs
src/: adapters.rs  auth.rs  axum.rs  core.rs  lib.rs  schema.rs  store.rs  types.rs
src/adapters/: database.rs  sqlx.rs  traits.rs
src/adapters/sqlx/: account.rs  pending.rs  session.rs  user.rs  verification.rs
src/adapters/traits/: account.rs  pending.rs  session.rs  user.rs  verification.rs
src/auth/: builder.rs  config.rs  token.rs  verification.rs
src/auth/config/: advanced.rs  email_verification.rs  id_generator.rs  session.rs
src/axum/: handlers.rs  types.rs
src/axum/handlers/: email.rs  session.rs  signin_email.rs  signup_email.rs
src/core/: email.rs  entity.rs
src/store/: memory.rs  sqlx.rs
src/types/: data.rs  payload.rs
src/util/: token.rs
tests/: axum_session.rs  axum_signin_email.rs  axum_signout.rs  axum_signup_email.rs
tests/support/: mod.rs
