[package]
name = "auth-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
axum = ["dep:axum"]
sqlx = ["dep:sqlx"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8", optional = true }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
email_address = "0.2.9"
hex = "0.4.3"
ksuid = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
sea-query = { version = "1.0", features = ["backend-postgres"] }
sha2 = "0.11.0"
sqlx = { version="0.9.0", features = ["runtime-tokio", "postgres", "chrono"], optional = true }
tokio = "1.52.3"
url = "2.5.8"
